--- a/assets/main.css
+++ b/assets/main.css
@@ -4,6 +4,81 @@ body{
 #menu{
     background-color: green;
 }
+.nav{
+    display: flex;
+    font-size: larger;
+    background-color: rgb(16, 52, 11);
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 90px;
+   }
+.carsale{
+width: 30%;
+padding-left: 3%;
+}   
+.carsale a{
+    color: rgb(251, 248, 248);
+    list-style: none;
+    text-decoration: none;
+    /* font-family: 'Oleo Script', cursive; */
+    font-size: 40px;
+    font-weight: bold;
+}
+.nav-list ul li{
+margin-left: 8%;
+    display: inline-block;
+    padding-top: 3%; 
+    }
+.nav-list{
+width: 40%;
+    }
+.nav-list ul li a{
+        color: rgb(250, 247, 247);
+        text-decoration: none;
+       }
+      .nav-list ul li a:hover{
+       border-bottom: 4px solid #0a0a0a ;
+    }
+    .btns{
+        display: flex;
+        justify-content: space-around;
+        width: 30%;
+    }
+
+.loginlink{
+       /* margin-left: 13rem;
+       margin-top: 1rem; */
+    }
+.loginlink button{
+background-color: rgb(12, 171, 52);
+width: 8rem;
+height: 3rem;
+border-radius: none;
+border-width: 0px;
+}
+.loginlink button a{
+color: white;
+text-decoration: none;
+font-size: 20px;
+}
+.nav-button{
+        /* margin-left: 18rem;
+        margin-top: 1rem;
+        margin-right: 2rem; */
+      }
+.nav-button button{
+        background-color: #16b92e;
+        width: 10rem;
+        height: 3rem;
+        border-radius: none;
+        border-width: 0px;
+      }
+.nav-button button a{
+        color: white;
+        text-decoration: none;
+        font-size: 25px;
+      }
 .container{
     /* height: 100%;
     width: 100%; */
