--- a/assets/main.css
+++ b/assets/main.css
@@ -1,13 +1,10 @@
 body{
-    background-color: aqua;
-}
-#menu{
-    background-color: green;
+    background-color: #e5e5e5;
 }
 .nav{
     display: flex;
     font-size: larger;
-    background-color: rgb(16, 52, 11);
+    background-color:#14213D ;
     justify-content: space-between;
     align-items: center;
     width: 100%;
@@ -46,12 +43,8 @@ width: 40%;
         width: 30%;
     }
 
-.loginlink{
-       /* margin-left: 13rem;
-       margin-top: 1rem; */
-    }
 .loginlink button{
-background-color: rgb(12, 171, 52);
+background-color: #fca311;
 width: 8rem;
 height: 3rem;
 border-radius: none;
@@ -62,13 +55,8 @@ color: white;
 text-decoration: none;
 font-size: 20px;
 }
-.nav-button{
-        /* margin-left: 18rem;
-        margin-top: 1rem;
-        margin-right: 2rem; */
-      }
 .nav-button button{
-        background-color: #16b92e;
+        background-color:gold;
         width: 10rem;
         height: 3rem;
         border-radius: none;
@@ -79,24 +67,100 @@ font-size: 20px;
         text-decoration: none;
         font-size: 25px;
       }
-.container{
-    /* height: 100%;
-    width: 100%; */
-    margin-left: 30%;
-    box-shadow: 5px 10px #f0eded;
-}
-#car-form{
-    display: flex;
-    align-content: space-between;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 30%;
-    margin-right: 30%;
-}
-#btn{
-    margin-top: 2%;
-    background-color: rgb(252, 218, 252);
-    width: 50%;
+      #btn{
+        cursor: pointer;
+        background-color:gold;
+        color: white;
+        margin: 10% 0%;
+        padding: 12px 40px 10px 40px;
+        border: none;
+        border-radius: 10px;
+        font-size: 18px;
+        width: 100%;
+        text-align: center;
+    }    
 
-    height: 70%;
+.form{
+    border: solid black;
+    margin-top: 5%;
+    width: 50%;
+    height: 50%;
+    background: white;
+    padding-left: 4%;
+    padding-right: 5%;
+    margin-left: 20%;
 }
+.form h2{
+    color: black;
+    margin-top: 5%;
+    margin-left: 25%;
+    font-weight: 400;
+    font-size: 50px;
+}
+input[type=text]{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    color: black;
+    margin-top: 3%;
+    margin-bottom: 2%;
+
+}
+#description{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    color: black;
+    margin-top: 3%; 
+    margin-bottom: 2%;
+     
+    }
+    h2, .container{
+        margin: 0% 5%
+    }
+.card{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width:1000px;
+    margin-top: 3%;
+    background-color: white;
+    text-align: center;
+    padding-top: 2%;
+    margin-left: 20%;
+}
+.card img{
+    height: 500px;
+
+}
+#buttons{
+    display: flex;
+    justify-content: space-evenly;
+}
+#like{
+background-color: gold;
+padding:1% 3%;
+margin-bottom: 2%;
+
+
+}
+#delete{
+    background-color: gold;
+    padding: 1% 3%;
+    margin-bottom: 2%;
+}
+.content h2{
+    font-size: xx-large;
+}
+.like-count{
+    color: red;
+    font-size: x-large;
+}
+.content p{
+    line-height: 1.7;
+    padding:0% 5%;
+}
+#car-list{
+list-style: none;
+}
+
