--- a/assets/main.css
+++ b/assets/main.css
@@ -56,7 +56,7 @@ text-decoration: none;
 font-size: 20px;
 }
 .nav-button button{
-        background-color:gold;
+        background-color:#fca311;
         width: 10rem;
         height: 3rem;
         border-radius: none;
@@ -69,7 +69,7 @@ font-size: 20px;
       }
       #btn{
         cursor: pointer;
-        background-color:gold;
+        background-color:#fca311;
         color: white;
         margin: 10% 0%;
         padding: 12px 40px 10px 40px;
@@ -138,16 +138,18 @@ input[type=text]{
     justify-content: space-evenly;
 }
 #like{
-background-color: gold;
+background-color: #fca311;
 padding:1% 3%;
 margin-bottom: 2%;
+border: none;
 
 
 }
 #delete{
-    background-color: gold;
+    background-color: #fca311;
     padding: 1% 3%;
     margin-bottom: 2%;
+    border: none;
 }
 .content h2{
     font-size: xx-large;
